--- a/final-serverless-functions.adoc
+++ b/final-serverless-functions.adoc
@@ -13,7 +13,7 @@ To create Knative functions on your workstation, you need the following:
 
 `kn func` CLI can generate function projects from pre-defined set of templates that generate function projects from boilerplates. These project templates are available for a variety of languages such as Node.js, Quarkus, Python, Go etc. It also allows you to select the invocation format of the function from two choices - HTTP and CloudEvent, HTTP being the default. These templates depend on language-specific frameworks. When HTTP invocation format is selected, it handles the HTTP invocation procedure.  That includes running an HTTP server, exposing HTTP endpoints, parsing incoming data from request, invoking the function, and finally transforming the returned value into a proper HTTP response.
 
-`kn func` CLI also helps to build, run and deploy them efficiently. These functions are deployed as standard Knative services, entitling it to have all capabilities of Knative services such being event-driven and auto-scalable.
+`kn func` CLI also helps to build, run and deploy them efficiently. These functions are deployed as standard Knative services, entitling it to have all capabilities of Knative services like being event-driven and auto-scalable.
 
 
 
