--- a/final-serverless-functions.adoc
+++ b/final-serverless-functions.adoc
@@ -17,7 +17,7 @@ To create Knative functions on your workstation, you need the following:
 
 
 
-The development of Serverless Functions follow the following steps:
+The development of Serverless Functions consist of the following steps:
 
 . First, create a serverless function project in your preferred runtime by executing the `kn func create` command.
 . Refine the generated boilerplate code based on your specific requirements, enabling the function to access request data, execute your business logic, and generate an appropriate response.
