--- a/final-serverless-functions.adoc
+++ b/final-serverless-functions.adoc
@@ -1,8 +1,7 @@
 = Introducing Serverless Functions
 
-Serverless functions help to effortlessly create, build, and deploy services, without having to know about the intricate details of the underlying infrastructure. These simple functions are designed to let the developers focus on accepting input, perform the defined business logic, and finally, produce an output.  
-
-
+Serverless functions help to effortlessly create, build, and deploy services, without having to know about the intricate details of the underlying infrastructure. 
+These simple functions are designed to let the developers focus on accepting input, perform the defined business logic, and produce an output.  
 
 To create Knative functions on your workstation, you need the following:
 
