--- a/final-serverless-functions.adoc
+++ b/final-serverless-functions.adoc
@@ -14,7 +14,8 @@ To create Knative functions on your workstation, you need the following:
 These project templates are available for a variety of languages such as Node.js, Quarkus, Python, Go etc. 
 It also allows you to select the invocation format of the function from two choices—HTTP and CloudEvent, HTTP being the default. 
 These templates depend on language-specific frameworks. 
-When HTTP invocation format is selected, it handles the HTTP invocation procedure.  That includes running an HTTP server, exposing HTTP endpoints, parsing incoming data from request, invoking the function, and finally transforming the returned value into a proper HTTP response.
+When HTTP invocation format is selected, it handles the HTTP invocation procedure.  
+That includes running an HTTP server, exposing HTTP endpoints, parsing incoming data from request, invoking the function, and finally transforming the returned value into a proper HTTP response.
 
 `kn func` CLI also helps to build, run, and deploy functions efficiently. 
 These functions are deployed as standard Knative services, entitling it to have all capabilities of Knative services like being event-driven and auto-scalable.
@@ -50,14 +51,17 @@ Knative Functions has two invocation types - `http` and `cloudevents` for every 
 a. Without mentioning a template, it uses `http`, that generates functions responding to HTTP requests.
 b. When selected, the `cloudevents` template creates event-driven functions that handle Cloud Events.
 
-. The project-name provides the name for local project directory. By default, this parameter is used as the name for project directory, function name, container image name as well as Knative service name. 
+. The project-name provides the name for local project directory. 
+By default, this parameter is used as the name for project directory, function name, container image name as well as Knative service name. 
 
 [NOTE]
 ====
 For more information on all available flags for this command, execute `kn func create --help`.
 ====
 
-Running the `kn func create` command creates a serverless function project, having `func.yaml` configuration file. This file handles the build and deployment procedures of the function when using  `kn func` commands afterwards. the `kn func` commands handles updating this file, hence, unless a specific customization is needed, it is not needed to be modified manually.
+Running the `kn func create` command creates a serverless function project, having `func.yaml` configuration file. 
+This file handles the build and deployment procedures of the function when using  `kn func` commands afterwards. 
+The `kn func` commands handles updating this file, hence, unless a specific customization is needed, it is not needed to be modified manually.
 
 The following example highlights some important fields of the `func.yaml` file.
 
