--- a/final-serverless-functions.adoc
+++ b/final-serverless-functions.adoc
@@ -153,7 +153,7 @@ Executing this command provides information in its output, including the complet
 
 The following Knative function is developed to handle incoming HTTP requests and provide response based on the HTTP method. If the incoming request is an HTTP GET, the function verifies for the existence of a 'name' parameter in the query string. If the 'name' parameter is there, the function responds with a personalized greeting message containing the name; otherwise, it returns a generic greeting message. If the request is not an HTTP GET, it returns a response with a status code of 405 (Method Not Allowed) and a status message. 
 
-The next steps will demonstrate creating, build, local run and deployment of the Knative function to the cluster.
+The subsequent steps will demonstrate how to create, build, locally run, and deploy the Knative function.
 
 
 1. Create a serverless function project.
