--- a/final-serverless-functions.adoc
+++ b/final-serverless-functions.adoc
@@ -253,13 +253,14 @@ test('Unit: responds with error code if not GET', async t => {
 
 
 c. To keep things simple, we are not writing integration tests for this applications. Therefore, remove the `test/integration.js` file.
++
 ----
    [student@workstation greeting]$ rm test/integration.js
 ----
 +
 
-c. As we have removed the integration.js containing boilerplate integration test cases, hence we also need to edit the `npm test` script in `package.json` file. Open `package.json` file and replace it's content with the following:
-
+d. As we have removed the integration.js containing boilerplate integration test cases, hence we also need to edit the `npm test` script in `package.json` file. Open `package.json` file and replace it's content with the following:
++
 ```
 {
   "name": "greeting",
@@ -285,9 +286,8 @@ c. As we have removed the integration.js containing boilerplate integration test
 }
 
 
-
 ```
-
++
 
 3. Test the serverless function by running the provided automated tests.
 
@@ -339,17 +339,20 @@ Note: building a function the first time will take longer than subsequent builds
 Building function image
 🙌 Function built: quay.io/student/greeting:latest
 ----
++
 In the output shown above, the image is being published in quay.io, for the namespace `student`. This will change based on the image registry and namespace specified during the build process.
 
 
 
 The build command uses the function project name and the image registry name to construct a fully qualified image name for your function. This command builds a container image that can be run locally or on a cluster.
 
-
++
 [NOTE]
 ====
 . During the execution of `kn func build` command, it might prompt you to provide the image registry name for the function images. You can provide the registry name such as 'quay.io/youruser' or 'docker.io/youruser' where `youruser` is your user or team namespace in the image registry.
 ====
++
+
 
 b. You can verify that the image is available locally by running 'podman images' or 'docker images' command based on whether you have podman or docker installed in your workstation.
 +
@@ -385,7 +388,7 @@ latest: digest: sha256:e67b1a97f78466ff10ad7c7cefc3693007de477842935802e7508c06a
 ✅ Function updated in namespace "default" and exposed at URL: 
    http://greeting.default.apps.example.com
 ----
-
++
 [NOTE]
 ====
 . During this step, it might ask you for your image registry credentials.
@@ -403,7 +406,7 @@ b. You can find the function URL from the output of the preceding command.
 Alternatively, you can find the URL by using the `kn route list` command.
 
 c. Append the `name` parameter to the function URL
-
++
 The URL should look like the following.
 +
 [subs=+quotes]
